--- a/src/components/project.css
+++ b/src/components/project.css
@@ -10,7 +10,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    background-color: #ff6c11;
   }
+
+.project {
+  padding: 10px;
+}
   
   .project-preview {
     padding: 10px;
@@ -25,6 +30,7 @@
   text-decoration: none;
   color: #ff6c11;
 }
+
 .project {
   margin: 10px;
 }
